--- a/Credit_Link_Capital_Subsidy_Scheme_for_Technology_Upgradation.html
+++ b/Credit_Link_Capital_Subsidy_Scheme_for_Technology_Upgradation.html
@@ -125,159 +125,22 @@
                <img src="https://via.placeholder.com/730x430" alt="team-01">                            
             </div> -->
 					<div class="service-detail">
-						<h3 class="service-title-saprater">Book-Keeping & Auditing
-							Services</h3>
+						<h3 class="service-title-saprater">Book-Keeping Services</h3>
 						<p>The recording of financial transactions is bookkeeping,
 							whereas, accounting is interpreting, classifying, analyzing,
 							reporting, and summarizing the financial data. A properly
 							maintained accounting & bookkeeping system helps a business to
 							reduce operating costs and helps to analyze its financial growth.</p>
 
-						<p>The books of accounts needs to be maintained as per the
-							accounting standards and policies as per Accounting Standard
-							Board constituted at 21st April 1977.</p>
 					</div>
 
 					<div class="row">
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Auditing Services</h4>
-									<p>As per Section 44AB of the Income Tax Act 1961, any
-										person carrying on business is required to get his book
-										of accounts audited if total sales, turnover or gross receipt
-										in business for a financial year exceeds one Crore. In case of
-										profession should get his accounts audited, if the gross
-										receipts are greater than Rupees 50 lakh in any previous year.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>MIS</h4>
-									<p>MIS stands for management information system. It is a
-										management report which helps the management to review the
-										monthly performance, to compare it with the previous month's
-										and previous year's reports. Executives across at all levels
-										of an organization rely on reports generated from these
-										systems to help them evaluate their business daily activities
-										or problems that arise, make decisions, and track progress.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Budgetary controls</h4>
-									<p>Budgetary controls is the process by which budgets are
-										prepared for the future period and are compared with the
-										actual performance for finding out variances, if any. The
-										comparison of budgeted figures with actual figures will help
-										the management to find out variances and take corrective
-										actions without any delay.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Cash Flow statement</h4>
-									<p>Cash Flow statement shows the changes in the cash
-										position (Inflows and outflows) of a firm. It is an analytical
-										reconciliation statement which explains the reasons for the
-										differences between the opening and closing cash balances over
-										a period.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
+							<!--item-->
 						<div class="col-sm-3 col-lg-12 col-md-8">
 							<div class="about-box">
 								<div class="about-box-content">
-									<h4>Fund Flow Statement</h4>
-									<p>Fund Flow Statement is a statement that shows the ups
-										and downs of the financial position or the changes in working
-										capital of the entity between the two financial years.</p>
-									<div class="table-responsive">
-									<table class="table">
-										<thead class="thead-light">
-											<tr>
-												<th scope="col">BASIS FOR COMPARISON</th>
-												<th scope="col">CASH FLOW</th>
-												<th scope="col">FUND FLOW</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td>Meaning</td>
-												<td>A cash flow statement is a statement showing the
-													inflows and outflows of cash and cash equivalents over a
-													period.</td>
-												<td>A fund flow statement is a statement showing the
-													changes in the financial position of the entity in
-													different accounting years</td>
-											</tr>
-											<tr>
-												<td>Purpose of Preparation</td>
-												<td>To show the reasons for movements in the cash at
-													the beginning and at the end of the accounting period.</td>
-												<td>To show the reasons for the changes in the
-													financial position, with respect to previous year and
-													current accounting year.</td>
-											</tr>
-											<tr>
-												<td>Basis</td>
-												<td>Cash Basis of Accounting.</td>
-												<td>Accrual Basis of Accounting.</td>
-											</tr>
-											<tr>
-												<td>Analysis</td>
-												<td>Short Term Analysis of cash planning.</td>
-												<td>Long Term Analysis of financial planning</td>
-											</tr>
-											<tr>
-												<td>Discloses</td>
-												<td>Cash Basis of Accounting.Inflows and Outflows of
-													Cash</td>
-												<td>Sources and applications of funds</td>
-											</tr>
-										</tbody>
-									</table>
-									</div>
-									<p>The financial position of any company can be better
-										understood with the help of a cash flow statement and fund
-										flow statement, along with the Balance Sheet and Income
-										statement. These two statements helps stakeholders to know the
-										sources and application of cash or funds.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Vendor & Project Management</h4>
-									<p>Vendor & Project Management is a discipline that enables
-										organizations to control costs, drive service excellence and
-										mitigate risks to gain increased value from their vendors
-										throughout the deal life cycle. It is the activities included
-										in researching and sourcing vendors, obtaining quotes with
-										pricing, capabilities, turnaround times, and quality of work,
-										negotiating contracts, managing relationships, assigning jobs,
-										evaluating performance, and ensuring payments are made.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
 									<h4>Cloud Accounting Services</h4>
+
 									<p>Cloud accounting software is unlike traditional way of
 										book keeping by installing accounting software in standalone
 										system or within the intranet set up. A cloud accounting
@@ -285,6 +148,7 @@
 										connecting remote servers, it is similar to the SaaS (Software
 										as a Service) business model. Data is sent into “the cloud,”
 										where it is processed and returned to the user.</p>
+
 								</div>
 							</div>
 						</div>
@@ -292,8 +156,7 @@
 						<div class="col-lg-12 col-md-8">
 							<div class="about-box">
 								<div class="about-box-content">
-									<h4 class="service-title-saprater">Benefits Cloud
-										accounting:</h4>
+									<h4>Benefits Cloud accounting:</h4>
 									<h4>Organizational reporting and visibility</h4>
 									<p>With cloud accounting, it’s also easier to get real-time
 										reporting and visibility throughout your organization, with
@@ -306,23 +169,182 @@
 								</div>
 							</div>
 						</div>
-						<!--item-->
+							<!--item-->
 						<div class="col-lg-12 col-md-8">
 							<div class="about-box">
 								<div class="about-box-content">
 									<h4>The Benefits of Cloud Accounting</h4>
+								<ol>
+								<li>Mobile access at any time</li>
+								<li>A cost and time-effective solution</li>
+								<li>Watertight security and no time-consuming back-ups</li>
+								<li>Share and collaborate with ease</li>
+								<li>Reduces paperwork and is more sustainable</li>
+								<li>Better control of your financial processes.</li>
+								</ol>
+								</div>
+							</div>
+						</div>
+							<!--item-->
+						<div class="col-lg-12 col-md-8">
+							<div class="about-box">
+								<div class="about-box-content">
+									<h4>Payroll Services</h4>
+									<p>Processing payroll is a very important function of any
+										business and necessitates an understanding of current
+										regulations, detailed tax knowledge to ensure proper
+										withholding and filing, and a highly organized system that can
+										be relied upon to pay each employee the right amount of money.
+										For many organizations, using payroll systems or outsourcing
+										payroll can help to mitigate stress and minimize errors.</p>
+									<p>We provides comprehensive payroll services to
+										organizations adhering provisions of labor law, Income tax,
+										Employee Provident Fund and Employee State Insurance. Our
+										services ensures a competitive advantage and reduces the admin
+										costs of organization and serve you with our expert team.</p>
+								</div>
+							</div>
+						</div>
+						<!--item-->
+						<div class="col-lg-12 col-md-8">
+							<div class="about-box">
+								<div class="about-box-content">
+									<h4>Benefits of hiring us</h4>
+								<ol>
+								<li>Organizing and archiving personal files of personnel,</li>
+								<li>Arranging the monthly payrolls of the personnel working in the company in accordance with the information received from the company,</li>
+								<li>Keep track of employee details, pay structure, investment declaration, resignation, confirmation, bonus payout and other personal details</li>
+								<li>Periodically monitor employee leave with respect to company leave policy</li>
+								<li>Preparation of Monthly Provident Fund, ESI, Professional and TDS deductions from employees, payment of challan, returns and dealing with government authorities on behalf.</li>
+								<li>Addition and deletion of employee in PF and ESI portal, provide assistance to employees on PF claims, PF Transfer and avail ESI services.</li>
+								<li>Providing electronic payroll records to employees and employers</li>
+								<li>Issue Form 16 for the employee TDS deductions</li>
+								<li>Update on recent amendments in existing labor laws and other related statutes.</li>
+								</div>
+							</div>
+						</div>
+							<!--item-->
+						<div class="col-lg-12 col-md-8">
+							<div class="about-box">
+								<div class="about-box-content">
+									<h4>Tax Refund Services</h4>
+									<h4>TDS & TCS Refund</h4>
+									<p>Mostly, the employees are paying tax on their salary but
+										some of them are not aware deducting the tax by employer is
+										not IT Declaration. The TDS deducted in Salary or any other
+										freelancer services or trading business everyone must file IT
+										Return on or before 31st July for Individual and 30th Sept for
+										Business entities. It is the only way to claim the Refund of
+										TDS and TCS.</p>
 
-									<ul>
-										<li>	<ol>
-												<li>Mobile access at any time</li>
-												<li>A cost and time-effective solution</li>
-												<li>Watertight security and no time-consuming back-ups</li>
-												<li>Share and collaborate with ease</li>
-												<li>Reduces paperwork and is more sustainable</li>
-												<li>Better control of your financial processes</li>
-											</ol>
-											</li>
-									</ul>
+								</div>
+							</div>
+						</div>
+							<!--item-->
+						<div class="col-lg-12 col-md-8">
+							<div class="about-box">
+								<div class="about-box-content">
+									<h4>GST Refund for eligible business</h4>
+									<p>Processing of timely GST refunds will help businesses
+										and facilitate trade through the release of blocked working
+										capital funds. Under GST, the GST Council created a
+										standardized system to process GST refund claims in a simple
+										procedure for the taxpayers. The entire GST refund claim and
+										processing are done online on the GST Portal. In this article,
+										we look at when the GST refund can be claimed by taxpayers.</p>
+
+								</div>
+							</div>
+						</div>
+							<!--item-->
+						<div class="col-lg-12 col-md-8">
+							<div class="about-box">
+								<div class="about-box-content">
+									<h4>Loan Process</h4>
+									<h4>MSME Business Loans in 59 Minutes</h4>
+									<p>Perhaps the most talked about business loan scheme right
+										now is the ‘MSME Business Loans in 59 Minutes’, a scheme first
+										announced in September 2018. The loans under this scheme are
+										given for financial assistance and encouragement of MSME
+										growth in the country. Both new and existing business can
+										utilize the scheme for a financial assistance up to ₹ 1 crore.
+										The actual process takes 8-12 days to complete, while the
+										approval or disapproval is granted within the first 59 minutes
+										of application. It is a refinancing scheme, wherein five
+										authorized public sector banks will grant the funds. The
+										interest rate depends on the nature of your business and
+										credit rating. No information has been given on subsidizing
+										the principal amount or interest subvention.</p>
+									<p>To apply for business loan under this scheme, you need
+										GST verifications, Income Tax verifications, bank account
+										statements for the last 6-months, ownership related
+										documentation, and KYC details.</p>
+									<p>Looking for support to know more information on application and approvals</p>
+								</div>
+							</div>
+						</div>
+							<!--item-->
+						<div class="col-lg-12 col-md-8">
+							<div class="about-box">
+								<div class="about-box-content">
+									<h4>MUDRA Loans</h4>
+									<p>Micro-units Development and Refinance Agency (MUDRA) is an organization established by the government of India to provide business finance to micro-business units. The loans under the scheme are given on the pretext of ‘funding the unfunded’. Since small companies and startups are often left to their own devices for financing their venture, the government has created the concept of low-cost credit to such undertakings. MUDRA Loans are also a refinanced business loans, approved and disbursed through public sector banks, private sector banks, co-operative societies, small banks, scheduled commercial banks and rural banks that come under the scheme. The loans are generally given to micro or small businesses operating in the manufacturing, trading and services sector. The MUDRA Loans are structured as under,</p>
+									</br>
+									</br>
+									<p>Sishu Loans up to Rs. 50,000/-</p>
+									<p>Kishor Loans up to Rs. 5,00,000/-</p>
+									<p>Tarun Loans up to Rs. 10,00,000/-</p>
+								</div>
+							</div>
+						</div>
+							<!--item-->
+						<div class="col-lg-12 col-md-8">
+							<div class="about-box">
+								<div class="about-box-content">
+									<h4>Credit Guarantee Fund Scheme for Micro and Small Enterprises</h4>
+									<p>The CGMSE was first launched in the year 2000 as a monetary support scheme for micro and small enterprises. It offers collateral-free credit for both new and existing business units that satisfy its eligibility criteria. The scheme provides working capital loans up to ₹ 10 lakhs without any collateral. However, for all credit facilities above ₹ 10 lakhs and up to ₹ 1 crore only primary security or mortgage of land and building associated with the building is obtained and such eligible accounts are covered under Credit Guarantee Fund Trust for Micro and Small Enterprises (CGTMSE). Asset created through the credit facility which are associated with the business unit are also considered as security when the loan amount exceeds ₹ 10 lakhs.</p>
+									<p>The business loans under this scheme are financed by various public and private sector banks covered under the scheme</p>
+								</div>
+							</div>
+						</div>
+							<!--item-->
+						<div class="col-lg-12 col-md-8">
+							<div class="about-box">
+								<div class="about-box-content">
+									<h4>National Small Industries Corporation Subsidy</h4>
+									<p>The NSIC subsidy for small businesses offers two kinds
+										of financial benefits – Raw Material Assistance and Marketing
+										Assistance. Under the raw material assistance scheme of NSIC,
+										both indigenous and imported raw materials are covered. Under
+										the marketing support, funds are given to SMEs for enhancing
+										their competitiveness and the market value of their products
+										and services. The NSIC is mainly focused on funding small and
+										medium enterprises who wish to improve / grow their
+										manufacturing quality and quantity.</p>
+
+								</div>
+							</div>
+						</div>
+							<!--item-->
+						<div class="col-lg-12 col-md-8">
+							<div class="about-box">
+								<div class="about-box-content">
+									<h4>Credit Link Capital Subsidy Scheme for Technology Upgradation</h4>
+									<p>This scheme allows small businesses to upgrade their
+										process by financing technological upgradation. The
+										technological upgradation can be related to numerous processes
+										within the organization, such as manufacturing, marketing,
+										supply chain etc. Through the CLCSS scheme, the government
+										aims to reduce the cost of production of goods and services
+										for small and medium enterprises, thus allowing them to remain
+										price competitive in local and international markets. The
+										scheme is run by the Ministry of Small-Scale Industries. The
+										CLCSS offers an up-front capital subsidy of 15% for eligible
+										business. However, there is a cap to the maximum amount that
+										can be availed as subsidy under the scheme, which is set at ₹
+										15 lakhs. Sole proprietorships, partnership firms,
+										co-operative, private and public limited companies come under
+										the ambit of this business loan scheme.</p>
 
 								</div>
 							</div>
