--- a/ESI_Registration.html
+++ b/ESI_Registration.html
@@ -125,17 +125,37 @@
                <img src="https://via.placeholder.com/730x430" alt="team-01">                            
             </div> -->
 					<div class="service-detail">
-						<h3 class="service-title-saprater">Book-Keeping & Auditing
-							Services</h3>
-						<p>The recording of financial transactions is bookkeeping,
-							whereas, accounting is interpreting, classifying, analyzing,
-							reporting, and summarizing the financial data. A properly
-							maintained accounting & bookkeeping system helps a business to
-							reduce operating costs and helps to analyze its financial growth.</p>
-
-						<p>The books of accounts needs to be maintained as per the
-							accounting standards and policies as per Accounting Standard
-							Board constituted at 21st April 1977.</p>
+						<h3 class="service-title-saprater">ESI Registration</h3>
+						<p>ESI stands for Employee State Insurance managed by the
+							Employee State Insurance Corporation which is an autonomous body
+							created by the law under the Ministry of Labour and Employment,
+							Government of India.</p>
+						<p>All employees of a covered unit, whose monthly incomes
+							(excluding overtime, bonus, and leave encashment does not exceed
+							₹21,000 per month, are eligible to avail benefits under the
+							Scheme. Employees earning daily average wage up to ₹ 176 are
+							exempted from ESIC contribution.</p>
+						<p>Employees' State Insurance Scheme will be calculated on the
+							gross salary (Basic and LOP dependent allowances) up to ₹ 21,000.
+							If Gross is above ₹21,000 ESI will be constant.</p>
+						<p>Every employer makes the ESI payment on a monthly basis,
+							and the payment is given to the ESI department. The due date for
+							ESI is the 15th of the following month, which can also exceed or
+							change according to the department rules.</p>
+						<p>Currently, the employee's contribution rate (w.e.f. 01.07.
+							2019) is 0.75% of the wages and that of employer's is 3.25% of
+							the wages paid/payable in respect of the employees in every wage
+							period. Employees in receipt of a daily average wage up to ₹
+							137/- are exempted from payment of contribution.</p>
+						<p>Registration of employers under ESI Act is fully online,
+							without requirement of submission of any physical application
+							documents either before the registration or after it. The
+							employer is required to submit the information in the online and
+							on successful submission of the information, the code number is
+							generated automatically and displayed to the employer. A copy of
+							registration letter along with the user credentials (user ID and
+							password) are also sent automatically to the email of the
+							employer.</p>
 					</div>
 
 					<div class="row">
@@ -143,190 +163,48 @@
 						<div class="col-lg-12 col-md-8">
 							<div class="about-box">
 								<div class="about-box-content">
-									<h4>Auditing Services</h4>
-									<p>As per Section 44AB of the Income Tax Act 1961, any
-										person carrying on business is required to get his book
-										of accounts audited if total sales, turnover or gross receipt
-										in business for a financial year exceeds one Crore. In case of
-										profession should get his accounts audited, if the gross
-										receipts are greater than Rupees 50 lakh in any previous year.</p>
+									<h4>Documents required for ESI registration</h4>
+									<h4>The list of documents required for ESI registration is
+										given below</h4>
+									<ol>
+									<li>Name of the company.</li>
+									<li>Date of the setup of the organization.</li>
+									<li>Scanned copy of the company’s PAN (Proprietor’s, in
+										case of proprietorship concern).</li>
+									<li>Scanned copy of the licenses available in the name of
+										the company. (Like GST).</li>
+									<li>Scanned copy of cheque of company’s bank account.</li>
+									<li>Address of the company with address proof.</li>
+									<li>List of Directors / Partners.</li>
+									<li>Address proof of Proprietor / Director / Partner of
+										the company.</li>
+									<li>Email address, Mobile number of Proprietor / Director
+										/ Partner of the company.</li>
+									<li>Copy of First sale bill / Job work bill and First
+										purchase bill.</li>
+									<li>The monthly strength of employees from the date of
+										setup.</li>
+									<li>Current list of employees with their details:</li>
+									<ol>
+									<li>Name</li>
+									<li>Father’s Name</li>
+									<li>Date of joining</li>
+									<li>Date of birth</li>
+									<li>Mobile number</li>
+									<li>Postal address</li>
+									<li>Name of nominee</li>
+									<li>Grade</li>
+									<li>Salary</li>
+									<li>Designation</li>
+									<li>ID proof (Aadhaar and PAN)</li>
+									<li>Bank A/c number with IFSC code</li>
+									<li>Digital Signature of the Proprietor / Director / Partner</li>
+									</ol>
+									</ol>
 								</div>
 							</div>
 						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>MIS</h4>
-									<p>MIS stands for management information system. It is a
-										management report which helps the management to review the
-										monthly performance, to compare it with the previous month's
-										and previous year's reports. Executives across at all levels
-										of an organization rely on reports generated from these
-										systems to help them evaluate their business daily activities
-										or problems that arise, make decisions, and track progress.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Budgetary controls</h4>
-									<p>Budgetary controls is the process by which budgets are
-										prepared for the future period and are compared with the
-										actual performance for finding out variances, if any. The
-										comparison of budgeted figures with actual figures will help
-										the management to find out variances and take corrective
-										actions without any delay.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Cash Flow statement</h4>
-									<p>Cash Flow statement shows the changes in the cash
-										position (Inflows and outflows) of a firm. It is an analytical
-										reconciliation statement which explains the reasons for the
-										differences between the opening and closing cash balances over
-										a period.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-sm-3 col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Fund Flow Statement</h4>
-									<p>Fund Flow Statement is a statement that shows the ups
-										and downs of the financial position or the changes in working
-										capital of the entity between the two financial years.</p>
-									<div class="table-responsive">
-									<table class="table">
-										<thead class="thead-light">
-											<tr>
-												<th scope="col">BASIS FOR COMPARISON</th>
-												<th scope="col">CASH FLOW</th>
-												<th scope="col">FUND FLOW</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td>Meaning</td>
-												<td>A cash flow statement is a statement showing the
-													inflows and outflows of cash and cash equivalents over a
-													period.</td>
-												<td>A fund flow statement is a statement showing the
-													changes in the financial position of the entity in
-													different accounting years</td>
-											</tr>
-											<tr>
-												<td>Purpose of Preparation</td>
-												<td>To show the reasons for movements in the cash at
-													the beginning and at the end of the accounting period.</td>
-												<td>To show the reasons for the changes in the
-													financial position, with respect to previous year and
-													current accounting year.</td>
-											</tr>
-											<tr>
-												<td>Basis</td>
-												<td>Cash Basis of Accounting.</td>
-												<td>Accrual Basis of Accounting.</td>
-											</tr>
-											<tr>
-												<td>Analysis</td>
-												<td>Short Term Analysis of cash planning.</td>
-												<td>Long Term Analysis of financial planning</td>
-											</tr>
-											<tr>
-												<td>Discloses</td>
-												<td>Cash Basis of Accounting.Inflows and Outflows of
-													Cash</td>
-												<td>Sources and applications of funds</td>
-											</tr>
-										</tbody>
-									</table>
-									</div>
-									<p>The financial position of any company can be better
-										understood with the help of a cash flow statement and fund
-										flow statement, along with the Balance Sheet and Income
-										statement. These two statements helps stakeholders to know the
-										sources and application of cash or funds.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Vendor & Project Management</h4>
-									<p>Vendor & Project Management is a discipline that enables
-										organizations to control costs, drive service excellence and
-										mitigate risks to gain increased value from their vendors
-										throughout the deal life cycle. It is the activities included
-										in researching and sourcing vendors, obtaining quotes with
-										pricing, capabilities, turnaround times, and quality of work,
-										negotiating contracts, managing relationships, assigning jobs,
-										evaluating performance, and ensuring payments are made.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Cloud Accounting Services</h4>
-									<p>Cloud accounting software is unlike traditional way of
-										book keeping by installing accounting software in standalone
-										system or within the intranet set up. A cloud accounting
-										software is a system which can accessible from anywhere by
-										connecting remote servers, it is similar to the SaaS (Software
-										as a Service) business model. Data is sent into “the cloud,”
-										where it is processed and returned to the user.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4 class="service-title-saprater">Benefits Cloud
-										accounting:</h4>
-									<h4>Organizational reporting and visibility</h4>
-									<p>With cloud accounting, it’s also easier to get real-time
-										reporting and visibility throughout your organization, with
-										greater mobile capabilities and collaboration.
-										Subscription-based models are popular among cloud accounting
-										service providers, and in most cases these subscriptions are
-										usage-based. Companies that pay a cloud accounting
-										subscription receive auto updates depending upon any changes
-										in software functions with no additional charges.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>The Benefits of Cloud Accounting</h4>
-
-									<ul>
-										<li>	<ol>
-												<li>Mobile access at any time</li>
-												<li>A cost and time-effective solution</li>
-												<li>Watertight security and no time-consuming back-ups</li>
-												<li>Share and collaborate with ease</li>
-												<li>Reduces paperwork and is more sustainable</li>
-												<li>Better control of your financial processes</li>
-											</ol>
-											</li>
-									</ul>
-
-								</div>
-							</div>
-						</div>
+						
 					</div>
 				</div>
 
