--- a/services.html
+++ b/services.html
@@ -204,11 +204,11 @@
                            <span class="serivce-saprater"></span>
                            <ol>
                               <li><a href="book_keeping_services.html">Book Keeping Services(Cloud Accounting)</a> </li>
-                              <li><a href="#">Auditing Services</a> </li>
-                              <li><a href="#">Payroll Services</a> </li>
-                              <li><a href="#">MIS (Budgetary Controls, Cash Fund Flow Statements</a></li>
+                             <!--  <li><a href="#">Auditing Services</a> </li> -->
+                              <li><a href="payroll_services.html">Payroll Services</a> </li>
+                             <!--  <li><a href="#">MIS (Budgetary Controls, Cash Fund Flow Statements</a></li>
                               <li><a href="#">Vendor & Project Management</a> </li>
-                              <li><a href="#">Investment Banking</a> </li>
+                              <li><a href="#">Investment Banking</a> </li> -->
                            </ol>
                         </div>
                      </div>
@@ -219,18 +219,18 @@
                            <h4><a href="service-detail.html">Registration</a></h4>
                            <span class="serivce-saprater"></span>
                            <ol>
-                              <li><a href="#">Goods & Services Tax Registration</a> </li>
-                              <li><a href="#">Company or LLP Incorporation</a> </li>
-                              <li><a href="#">PAN & TAN</a> </li>
-                              <li><a href="#">MSME Registration</a></li>
-                              <li><a href="#">Import Export Code</a> </li>
-                              <li><a href="#">Provident Fund Registration</a> </li>
-                              <li><a href="#">ESI Registration</a> </li>
-                              <li><a href="#">Professional Tax Registration</a> </li>
-                              <li><a href="#">Trademark Registration</a> </li>
+                             <!--  <li><a href="#">Goods & Services Tax Registration</a> </li> -->
+                              <li><a href="Company_or_LLP_Incorporation.html">Company or LLP Incorporation</a> </li>
+                              <li><a href="PAN_TAN.html">PAN & TAN</a> </li>
+                              <li><a href="MSME_Registration.html">MSME Registration</a></li>
+                              <li><a href="Import_Export_Code.html">Import Export Code</a> </li>
+                             <!--  <li><a href="#">Provident Fund Registration</a> </li> -->
+                              <li><a href="ESI_Registration.html">ESI Registration</a> </li>
+                              <li><a href="Provident_Fund_Registration.html">Professional Tax Registration</a> </li>
+                             <!--  <li><a href="#">Trademark Registration</a> </li>
                               <li><a href="#">DSC Registration</a> </li>
                               <li><a href="#">STPI Registration</a> </li>
-                              <li><a href="#">FSSAI License</a> </li>
+                              <li><a href="#">FSSAI License</a> </li> -->
                            </ol>
                         </div>
                      </div>
@@ -241,13 +241,13 @@
                            <h4><a href="service-detail.html">Compliance & Filing</a></h4>
                            <span class="serivce-saprater"></span>
                            <ol>
-                              <li><a href="#">Income Tax return Filing (Individuals, Firms and Companies)</a> </li>
-                              <li><a href="#">TDS Return Filing (Form 16, Form 16A, TDS Refund</a> </li>
-                              <li><a href="#">GST Return Filing (Monthly, Annual, LUT, Amendments, Refund)</a> </li>
-                              <li><a href="#">ROC Filing (Annual Filing, Name Change, Constitutional Change and Closure)</a></li>
-                              <li><a href="#">Provident Fund Filing </a> </li>
-                              <li><a href="#">ESI Filing</a> </li>
-                              <li><a href="#">STPI (Softex Filing)</a> </li>
+                              <li><a href="income_tax_return_filling.html">Income Tax return Filing (Individuals, Firms and Companies)</a> </li>
+                              <li><a href="TDS_return_filling.html">TDS Return Filing (Form 16, Form 16A, TDS Refund</a> </li>
+                              <li><a href="GST_return_filling.html">GST Return Filing (Monthly, Annual, LUT, Amendments, Refund)</a> </li>
+                              <li><a href="ROC_Filling.html">ROC Filing (Annual Filing, Name Change, Constitutional Change and Closure)</a></li>
+                              <li><a href="provident_fund_filing.html">Provident Fund Filing </a> </li>
+                              <li><a href="ESI_filling.html">ESI Filing</a> </li>
+                              <li><a href="STPI_compliance.html">STPI (Softex Filing)</a> </li>
                            </ol>
                         </div>
                      </div>
@@ -258,12 +258,12 @@
                            <h4><a href="service-detail.html">Loan Process</a></h4>
                            <span class="serivce-saprater"></span>
                            <ol>
-                              <li><a href="#">SIDBI Loan</a> </li>
-                              <li><a href="#">MSME Business Loans in 59 Minutes</a> </li>
-                              <li><a href="#">MUDRA Loans</a> </li>
-                              <li><a href="#">Credit Guarantee Fund Scheme for Micro and Small Enterprises</a></li>
-                              <li><a href="#">National Small Industries Corporation Subsidy</a> </li>
-                              <li><a href="#">Credit Link Capital Subsidy Scheme for Technology Up-gradation</a> </li>
+                             <!--  <li><a href="#">SIDBI Loan</a> </li> -->
+                              <li><a href="MSME_Business_Loans.html">MSME Business Loans in 59 Minutes</a> </li>
+                              <li><a href="MUDRA_Loans.html">MUDRA Loans</a> </li>
+                              <li><a href="Credit_Guarantee_Fund_Scheme_for_Micro_and_Small_Enterprises.html">Credit Guarantee Fund Scheme for Micro and Small Enterprises</a></li>
+                              <li><a href="National_Small_Industries_Corporation_Subsidy.html">National Small Industries Corporation Subsidy</a> </li>
+                              <li><a href="Credit_Link_Capital_Subsidy_Scheme_for_Technology_Upgradation.html">Credit Link Capital Subsidy Scheme for Technology Up-gradation</a> </li>
                            </ol>
                         </div>
                      </div>
