--- a/GST_return_filling.html
+++ b/GST_return_filling.html
@@ -125,135 +125,123 @@
                <img src="https://via.placeholder.com/730x430" alt="team-01">                            
             </div> -->
 					<div class="service-detail">
-						<h3 class="service-title-saprater">Book-Keeping & Auditing
-							Services</h3>
-						<p>The recording of financial transactions is bookkeeping,
-							whereas, accounting is interpreting, classifying, analyzing,
-							reporting, and summarizing the financial data. A properly
-							maintained accounting & bookkeeping system helps a business to
-							reduce operating costs and helps to analyze its financial growth.</p>
+						<h3 class="service-title-saprater">GST Filing</h3>
+						<p>Goods and Service Tax (GST) is an indirect tax levied on
+							the supply of goods and services. This law has replaced many
+							indirect tax laws that previously existed in India. The Goods and
+							Service Tax Act was passed in the Parliament on 29th March 2017.
+							The Act came into effect on 1st July 2017. GST is one indirect
+							tax for the entire country.</p>
 
-						<p>The books of accounts needs to be maintained as per the
-							accounting standards and policies as per Accounting Standard
-							Board constituted at 21st April 1977.</p>
+						<p>The registered taxpayers are mandatorily to file their
+							returns periodically to tax administrative authorities. In their
+							return, the taxpayer needs to disclose the details of Purchase,
+							tax on purchase, Sales and tax on Sales of particular month. The
+							tax liability is auto calculated in GST system and if any tax
+							amount to be paid in cash over and above after setting off input
+							tax credit (Tax on Purchase).</p>
 					</div>
 
 					<div class="row">
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Auditing Services</h4>
-									<p>As per Section 44AB of the Income Tax Act 1961, any
-										person carrying on business is required to get his book
-										of accounts audited if total sales, turnover or gross receipt
-										in business for a financial year exceeds one Crore. In case of
-										profession should get his accounts audited, if the gross
-										receipts are greater than Rupees 50 lakh in any previous year.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>MIS</h4>
-									<p>MIS stands for management information system. It is a
-										management report which helps the management to review the
-										monthly performance, to compare it with the previous month's
-										and previous year's reports. Executives across at all levels
-										of an organization rely on reports generated from these
-										systems to help them evaluate their business daily activities
-										or problems that arise, make decisions, and track progress.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Budgetary controls</h4>
-									<p>Budgetary controls is the process by which budgets are
-										prepared for the future period and are compared with the
-										actual performance for finding out variances, if any. The
-										comparison of budgeted figures with actual figures will help
-										the management to find out variances and take corrective
-										actions without any delay.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Cash Flow statement</h4>
-									<p>Cash Flow statement shows the changes in the cash
-										position (Inflows and outflows) of a firm. It is an analytical
-										reconciliation statement which explains the reasons for the
-										differences between the opening and closing cash balances over
-										a period.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
+							<!--item-->
 						<div class="col-sm-3 col-lg-12 col-md-8">
 							<div class="about-box">
 								<div class="about-box-content">
-									<h4>Fund Flow Statement</h4>
-									<p>Fund Flow Statement is a statement that shows the ups
-										and downs of the financial position or the changes in working
-										capital of the entity between the two financial years.</p>
+									<h4>Due Dates of Filing GST Returns</h4>
+								<h6>These returns are as per the CGST Act*</h6>
 									<div class="table-responsive">
 									<table class="table">
 										<thead class="thead-light">
 											<tr>
-												<th scope="col">BASIS FOR COMPARISON</th>
-												<th scope="col">CASH FLOW</th>
-												<th scope="col">FUND FLOW</th>
+												<th scope="col">Return Form</th>
+												<th scope="col">Particulars</th>
+												<th scope="col">Frequency</th>
+												<th scope="col">Due Date </th>
 											</tr>
 										</thead>
 										<tbody>
 											<tr>
-												<td>Meaning</td>
-												<td>A cash flow statement is a statement showing the
-													inflows and outflows of cash and cash equivalents over a
-													period.</td>
-												<td>A fund flow statement is a statement showing the
-													changes in the financial position of the entity in
-													different accounting years</td>
+												<td>GSTR-1</td>
+												<td>Details of outward supplies of taxable goods and/or services affected</td>
+												<td>Monthly</td>
+												<td>11th* of the next month with effect from October 2018</td>
 											</tr>
 											<tr>
-												<td>Purpose of Preparation</td>
-												<td>To show the reasons for movements in the cash at
-													the beginning and at the end of the accounting period.</td>
-												<td>To show the reasons for the changes in the
-													financial position, with respect to previous year and
-													current accounting year.</td>
+												<td>GSTR-2 Suspended</td>
+												<td>Details of inward supplies of taxable goods and/or services affected claiming the input tax credit.</td>
+												<td>Monthly</td>
+												<td>15th of the next month</td>
 											</tr>
 											<tr>
-												<td>Basis</td>
-												<td>Cash Basis of Accounting.</td>
-												<td>Accrual Basis of Accounting.</td>
+												<td>GSTR-3 Suspended</td>
+												<td>Monthly return on the basis of finalization of details of outward supplies and inward supplies along with the payment of tax.</td>
+												<td>Monthly</td>
+												<td>20th of the next month</td>
 											</tr>
 											<tr>
-												<td>Analysis</td>
-												<td>Short Term Analysis of cash planning.</td>
-												<td>Long Term Analysis of financial planning</td>
+												<td>GSTR-3B</td>
+												<td>Simple Return in which summary of outward supplies along with Input Tax Credit is declared  and payment of tax is affected by taxpayer</td>
+												<td>Monthly</td>
+												<td>20th of the next month</td>
 											</tr>
 											<tr>
-												<td>Discloses</td>
-												<td>Cash Basis of Accounting.Inflows and Outflows of
-													Cash</td>
-												<td>Sources and applications of funds</td>
+												<td>CMP-08**</td>
+												<td>Return for a taxpayer registered under the composition levy</td>
+												<td>Quarterly</td>
+												<td>18th of the month succeeding quarter</td>
+											</tr>
+											<tr>
+												<td>GSTR-5</td>
+												<td>Return for a Non-Resident foreign taxable person</td>
+												<td>Monthly</td>
+												<td>20th of the next month</td>
+											</tr>
+											<tr>
+												<td>GSTR-6</td>
+												<td>Return for an Input Service Distributor</td>
+												<td>Monthly</td>
+												<td>13th of the next month</td>
+											</tr>
+											<tr>
+												<td>GSTR-7</td>
+												<td>Return for authorities deducting tax at source.</td>
+												<td>Monthly</td>
+												<td>10th of the next month</td>
+											</tr>
+											<tr>
+												<td>GSTR-8 </td>
+												<td>Details of supplies effected through e-commerce operator and the amount of tax collected</td>
+												<td>Monthly</td>
+												<td>10th of the next month</td>
+											</tr>
+											<tr>
+												<td>GSTR-9</td>
+												<td>Annual Return for a Normal Taxpayer</td>
+												<td>Annually</td>
+												<td>31st December of next financial year*</td>
+											</tr>
+											<tr>
+												<td>GSTR-9A</td>
+												<td>Annual Return a taxpayer registered under the composition levy anytime during the year</td>
+												<td>Annually</td>
+												<td>31st December of next financial year*</td>
+											</tr>
+											<tr>
+												<td>GSTR-10</td>
+												<td>Final Return</td>
+												<td>Once, when GST Registration is cancelled or surrendered</td>
+												<td>Within three months of the date of cancellation or date of cancellation order, whichever is later</td>
+											</tr>
+											<tr>
+												<td>GSTR-11</td>
+												<td>Details of inward supplies to be furnished by a person having UIN and claiming a refund</td>
+												<td>Monthly</td>
+												<td>28th of the month following the month for which statement is filed</td>
 											</tr>
 										</tbody>
 									</table>
 									</div>
-									<p>The financial position of any company can be better
-										understood with the help of a cash flow statement and fund
-										flow statement, along with the Balance Sheet and Income
-										statement. These two statements helps stakeholders to know the
-										sources and application of cash or funds.</p>
+									<p>* Subject to changes by Notifications/ Orders</p>
 								</div>
 							</div>
 						</div>
@@ -261,69 +249,30 @@
 						<div class="col-lg-12 col-md-8">
 							<div class="about-box">
 								<div class="about-box-content">
-									<h4>Vendor & Project Management</h4>
-									<p>Vendor & Project Management is a discipline that enables
-										organizations to control costs, drive service excellence and
-										mitigate risks to gain increased value from their vendors
-										throughout the deal life cycle. It is the activities included
-										in researching and sourcing vendors, obtaining quotes with
-										pricing, capabilities, turnaround times, and quality of work,
-										negotiating contracts, managing relationships, assigning jobs,
-										evaluating performance, and ensuring payments are made.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Cloud Accounting Services</h4>
-									<p>Cloud accounting software is unlike traditional way of
-										book keeping by installing accounting software in standalone
-										system or within the intranet set up. A cloud accounting
-										software is a system which can accessible from anywhere by
-										connecting remote servers, it is similar to the SaaS (Software
-										as a Service) business model. Data is sent into “the cloud,”
-										where it is processed and returned to the user.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4 class="service-title-saprater">Benefits Cloud
-										accounting:</h4>
-									<h4>Organizational reporting and visibility</h4>
-									<p>With cloud accounting, it’s also easier to get real-time
-										reporting and visibility throughout your organization, with
-										greater mobile capabilities and collaboration.
-										Subscription-based models are popular among cloud accounting
-										service providers, and in most cases these subscriptions are
-										usage-based. Companies that pay a cloud accounting
-										subscription receive auto updates depending upon any changes
-										in software functions with no additional charges.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>The Benefits of Cloud Accounting</h4>
+									<h4>Late filing Fees of GST Returns</h4>
 
-									<ul>
-										<li>	<ol>
-												<li>Mobile access at any time</li>
-												<li>A cost and time-effective solution</li>
-												<li>Watertight security and no time-consuming back-ups</li>
-												<li>Share and collaborate with ease</li>
-												<li>Reduces paperwork and is more sustainable</li>
-												<li>Better control of your financial processes</li>
-											</ol>
-											</li>
-									</ul>
+									<p>Return filing is mandatory under GST. It means that even
+										if there is no transaction, Nil return to be filed A return
+										cannot be filed unless the previous month/quarter’s returns
+										were not filed. late fee of Rs. 50/day i.e. Rs. 25 per day in
+										each case of CGST and SGST (in case of any tax liability) and
+										Rs. 20/day i.e. Rs. 10/- day in each CGST and SGST (in case of
+										Nil tax liability) subject to a maximum of Rs. 5000/-, from
+										the given due date to the actual date when the returns are
+										finally filed.</p>
+								</div>
+							</div>
+						</div>
+						<!--item-->
+						<div class="col-lg-12 col-md-8">
+							<div class="about-box">
+								<div class="about-box-content">
+									<h4>Interest on Late payment of GST</h4>
 
+									<p>According to the GST Penalty regulations,
+										an interest will be charged at the rate of 18 percent per
+										annum from the taxpayers who fail to pay their taxes on time.
+										The interest will be levied for the days after the due date.</p>
 								</div>
 							</div>
 						</div>
