--- a/Import_Export_Code.html
+++ b/Import_Export_Code.html
@@ -125,17 +125,13 @@
                <img src="https://via.placeholder.com/730x430" alt="team-01">                            
             </div> -->
 					<div class="service-detail">
-						<h3 class="service-title-saprater">Book-Keeping & Auditing
-							Services</h3>
-						<p>The recording of financial transactions is bookkeeping,
-							whereas, accounting is interpreting, classifying, analyzing,
-							reporting, and summarizing the financial data. A properly
-							maintained accounting & bookkeeping system helps a business to
-							reduce operating costs and helps to analyze its financial growth.</p>
-
-						<p>The books of accounts needs to be maintained as per the
-							accounting standards and policies as per Accounting Standard
-							Board constituted at 21st April 1977.</p>
+						<h3 class="service-title-saprater">Import Export Code</h3>
+						<p>IEC (Import Export Code) is required by anyone who is
+							looking to kick-start import and export business in the country.
+							It is issued by the DGFT (Director General of Foreign
+							Trade). IEC is a 10-digit code which has a lifetime validity. It
+							is used for clearing the goods from custom authority.</p>
+						
 					</div>
 
 					<div class="row">
@@ -143,13 +139,33 @@
 						<div class="col-lg-12 col-md-8">
 							<div class="about-box">
 								<div class="about-box-content">
-									<h4>Auditing Services</h4>
-									<p>As per Section 44AB of the Income Tax Act 1961, any
-										person carrying on business is required to get his book
-										of accounts audited if total sales, turnover or gross receipt
-										in business for a financial year exceeds one Crore. In case of
-										profession should get his accounts audited, if the gross
-										receipts are greater than Rupees 50 lakh in any previous year.</p>
+									<h4>Documents required for IEC code registration</h4>
+									<h4>Requisite documents in digital format (GIF/JPG) as detailed below</h4>
+									<h4>Documents for Proprietorship firms</h4>
+									<ol>
+									<li>Digital Photograph (3x3cms) of the Proprietor.</li>
+									<li>Copy of PAN card of the Proprietor.</li>
+									<li>Copy of Passport (first & last page)/Voter’s I-Card/ Driving Licence/UID (Aadhar card) (any one of these).</li>
+									<li>Sale deed in case business premise is self-owned; or Rental/Lease Agreement, in case office is rented/ leased; or latest electricity /telephone bill.</li>
+									<li>Bank Certificate as per ANF 2A(I)/ Cancelled Cheque bearing pre-printed name of applicant and A/C No.</li>
+								</ol>
+								</div>
+							</div>
+						</div>
+						
+						<!--item-->
+						<div class="col-lg-12 col-md-8">
+							<div class="about-box">
+								<div class="about-box-content">
+									<h4>Documents for Partnership firm</h4>
+									<ol>
+									<li>Digital Photograph (3x3cms) of the Managing Partner.</li>
+									<li>Copy of PAN card of the applicant entity.</li>
+									<li>Copy of Passport (first & last page)/Voter’s I-Card /UID (Aadhar Card) /Driving Licence/PAN (any one of these) of the Managing Partner signing the application.</li>
+									<li>Copy of Partnership Deed.</li>
+									<li>Sale deed in case business premise is self-owned; or Rental/Lease Agreement, in case office is rented/ leased; or latest electricity /telephone bill.</li>
+									<li>Bank Certificate as per ANF 2A (I)/Cancelled Cheque bearing pre-printed name of the applicant entity and A/C No.</li>
+								</ol>
 								</div>
 							</div>
 						</div>
@@ -157,14 +173,31 @@
 						<div class="col-lg-12 col-md-8">
 							<div class="about-box">
 								<div class="about-box-content">
-									<h4>MIS</h4>
-									<p>MIS stands for management information system. It is a
-										management report which helps the management to review the
-										monthly performance, to compare it with the previous month's
-										and previous year's reports. Executives across at all levels
-										of an organization rely on reports generated from these
-										systems to help them evaluate their business daily activities
-										or problems that arise, make decisions, and track progress.</p>
+									<h4>Documents for LLP firm/ Government Undertaking/ Public Limited Company/ Private Limited Company/ Section 25 Company</h4>
+									<ol>
+									<li>Digital Photograph (3x3cms) of the Designated Partner/Director of the Company signing the application.</li>
+									<li>Copy of PAN card of the applicant entity.</li>
+									<li>Copy of Passport (first & last page)/Voter’s I-Card /UID (Aadhar Card) /Driving Licence/ PAN (any one of these) of the Managing Partner/Director signing the application.</li>
+									<li>Certificate of incorporation as issued by the RoC</li>
+									<li>Sale deed in case business premise is self-owned; or Rental/Lease Agreement, in case office is rented/ leased; or latest electricity /telephone bill.</li>
+									<li>Bank Certificate as per ANF 2 A(I)/Cancelled Cheque bearing pre-printed name of the company and A/C No .</li>
+								</ol>
+								</div>
+							</div>
+						</div>
+					<!--item-->
+						<div class="col-lg-12 col-md-8">
+							<div class="about-box">
+								<div class="about-box-content">
+									<h4>Documents for Registered Society/ Trust</h4>
+									<ol>
+									<li>Digital Photograph (3x3cms) of the signatory applicant/Secretary or Chief Executive.</li>
+									<li>Copy of PAN card of the applicant entity.</li>
+									<li>Copy of Passport (first & last page)/Voter’s I-Card /UID (Aadhar Card) /Driving Licence/ PAN (any one of these) of the Secretary or Chief Executive/ Managing Trustee signing the application.</li>
+									<li>Sale deed in case business premise is self-owned; or Rental/Lease Agreement, in case office is rented/ leased; or latest electricity /telephone bill.</li>
+									<li>Registration Certificate of the Society / Copy of the Trust Deed</li>
+									<li>Bank Certificate as per ANF 2A(I)/Cancelled Cheque bearing pre-printed name of the Registered Society or Trust and A/C No.</li>
+								</ol>
 								</div>
 							</div>
 						</div>
@@ -172,158 +205,14 @@
 						<div class="col-lg-12 col-md-8">
 							<div class="about-box">
 								<div class="about-box-content">
-									<h4>Budgetary controls</h4>
-									<p>Budgetary controls is the process by which budgets are
-										prepared for the future period and are compared with the
-										actual performance for finding out variances, if any. The
-										comparison of budgeted figures with actual figures will help
-										the management to find out variances and take corrective
-										actions without any delay.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Cash Flow statement</h4>
-									<p>Cash Flow statement shows the changes in the cash
-										position (Inflows and outflows) of a firm. It is an analytical
-										reconciliation statement which explains the reasons for the
-										differences between the opening and closing cash balances over
-										a period.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-sm-3 col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Fund Flow Statement</h4>
-									<p>Fund Flow Statement is a statement that shows the ups
-										and downs of the financial position or the changes in working
-										capital of the entity between the two financial years.</p>
-									<div class="table-responsive">
-									<table class="table">
-										<thead class="thead-light">
-											<tr>
-												<th scope="col">BASIS FOR COMPARISON</th>
-												<th scope="col">CASH FLOW</th>
-												<th scope="col">FUND FLOW</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td>Meaning</td>
-												<td>A cash flow statement is a statement showing the
-													inflows and outflows of cash and cash equivalents over a
-													period.</td>
-												<td>A fund flow statement is a statement showing the
-													changes in the financial position of the entity in
-													different accounting years</td>
-											</tr>
-											<tr>
-												<td>Purpose of Preparation</td>
-												<td>To show the reasons for movements in the cash at
-													the beginning and at the end of the accounting period.</td>
-												<td>To show the reasons for the changes in the
-													financial position, with respect to previous year and
-													current accounting year.</td>
-											</tr>
-											<tr>
-												<td>Basis</td>
-												<td>Cash Basis of Accounting.</td>
-												<td>Accrual Basis of Accounting.</td>
-											</tr>
-											<tr>
-												<td>Analysis</td>
-												<td>Short Term Analysis of cash planning.</td>
-												<td>Long Term Analysis of financial planning</td>
-											</tr>
-											<tr>
-												<td>Discloses</td>
-												<td>Cash Basis of Accounting.Inflows and Outflows of
-													Cash</td>
-												<td>Sources and applications of funds</td>
-											</tr>
-										</tbody>
-									</table>
-									</div>
-									<p>The financial position of any company can be better
-										understood with the help of a cash flow statement and fund
-										flow statement, along with the Balance Sheet and Income
-										statement. These two statements helps stakeholders to know the
-										sources and application of cash or funds.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Vendor & Project Management</h4>
-									<p>Vendor & Project Management is a discipline that enables
-										organizations to control costs, drive service excellence and
-										mitigate risks to gain increased value from their vendors
-										throughout the deal life cycle. It is the activities included
-										in researching and sourcing vendors, obtaining quotes with
-										pricing, capabilities, turnaround times, and quality of work,
-										negotiating contracts, managing relationships, assigning jobs,
-										evaluating performance, and ensuring payments are made.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Cloud Accounting Services</h4>
-									<p>Cloud accounting software is unlike traditional way of
-										book keeping by installing accounting software in standalone
-										system or within the intranet set up. A cloud accounting
-										software is a system which can accessible from anywhere by
-										connecting remote servers, it is similar to the SaaS (Software
-										as a Service) business model. Data is sent into “the cloud,”
-										where it is processed and returned to the user.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4 class="service-title-saprater">Benefits Cloud
-										accounting:</h4>
-									<h4>Organizational reporting and visibility</h4>
-									<p>With cloud accounting, it’s also easier to get real-time
-										reporting and visibility throughout your organization, with
-										greater mobile capabilities and collaboration.
-										Subscription-based models are popular among cloud accounting
-										service providers, and in most cases these subscriptions are
-										usage-based. Companies that pay a cloud accounting
-										subscription receive auto updates depending upon any changes
-										in software functions with no additional charges.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>The Benefits of Cloud Accounting</h4>
-
-									<ul>
-										<li>	<ol>
-												<li>Mobile access at any time</li>
-												<li>A cost and time-effective solution</li>
-												<li>Watertight security and no time-consuming back-ups</li>
-												<li>Share and collaborate with ease</li>
-												<li>Reduces paperwork and is more sustainable</li>
-												<li>Better control of your financial processes</li>
-											</ol>
-											</li>
-									</ul>
-
+									<h4>Documents for HUF firms</h4>
+									<ol>
+									<li>Digital Photograph (3x3cms) of the Karta.</li>
+									<li>Copy of PAN card of the Karta.</li>
+									<li>Copy of Passport (first & last page)/Voter’s I-Card/ UID (Aadhar card)/ Driving Licence (any one of these) of the Karta.</li>
+									<li>Sale deed in case business premise is self-owned or Rental/Lease Agreement, in case office is rented/ leased or latest electricity /telephone bill.</li>
+									<li>Bank Certificate as per ANF 2A(I)/ Cancelled Cheque bearing pre-printed name of applicant and A/C No.</li>
+								</ol>
 								</div>
 							</div>
 						</div>
