--- a/TDS_return_filling.html
+++ b/TDS_return_filling.html
@@ -125,17 +125,24 @@
                <img src="https://via.placeholder.com/730x430" alt="team-01">                            
             </div> -->
 					<div class="service-detail">
-						<h3 class="service-title-saprater">Book-Keeping & Auditing
-							Services</h3>
-						<p>The recording of financial transactions is bookkeeping,
-							whereas, accounting is interpreting, classifying, analyzing,
-							reporting, and summarizing the financial data. A properly
-							maintained accounting & bookkeeping system helps a business to
-							reduce operating costs and helps to analyze its financial growth.</p>
+						<h3 class="service-title-saprater">TDS Return Filing</h3>
+						<p>Tax deduction at source is a means of collecting tax on
+							income, dividends or asset sales, by requiring the payer to
+							deduct tax due before paying the balance to the payee. In India,
+							under the Indian Income Tax Act of 1961, income tax must be
+							deducted at source as per the provisions of the Income Tax Act,
+							1961.</p>
 
-						<p>The books of accounts needs to be maintained as per the
-							accounting standards and policies as per Accounting Standard
-							Board constituted at 21st April 1977.</p>
+						<p>Applicability:</p>
+
+
+						<li>Company</li>
+						<li>LLP</li>
+						<li> An Individual is liable to deduct tax at source, if his
+							turnover in the previous financial year is greater than one Crore
+							or 25 Lakh in his Business or Profession respectively.</li>
+
+
 					</div>
 
 					<div class="row">
@@ -143,117 +150,201 @@
 						<div class="col-lg-12 col-md-8">
 							<div class="about-box">
 								<div class="about-box-content">
-									<h4>Auditing Services</h4>
-									<p>As per Section 44AB of the Income Tax Act 1961, any
-										person carrying on business is required to get his book
-										of accounts audited if total sales, turnover or gross receipt
-										in business for a financial year exceeds one Crore. In case of
-										profession should get his accounts audited, if the gross
-										receipts are greater than Rupees 50 lakh in any previous year.</p>
+									<h4>Reduction in rate of Tax Deduction at Source (TDS) &
+										Tax Collection at Source (TCS)</h4>
+									<p>In order to provide more funds at the disposal of the
+										taxpayers for dealing with the economic situation arising out
+										of COVID-19 pandemic, the rates of Tax Deduction at Source
+										(TDS) for  the following non-salaried specified payments made
+										to residents has been reduced by 25% for the period from 14th 
+										May, 2020  to 31st March, 2021</p>
 								</div>
 							</div>
 						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>MIS</h4>
-									<p>MIS stands for management information system. It is a
-										management report which helps the management to review the
-										monthly performance, to compare it with the previous month's
-										and previous year's reports. Executives across at all levels
-										of an organization rely on reports generated from these
-										systems to help them evaluate their business daily activities
-										or problems that arise, make decisions, and track progress.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Budgetary controls</h4>
-									<p>Budgetary controls is the process by which budgets are
-										prepared for the future period and are compared with the
-										actual performance for finding out variances, if any. The
-										comparison of budgeted figures with actual figures will help
-										the management to find out variances and take corrective
-										actions without any delay.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Cash Flow statement</h4>
-									<p>Cash Flow statement shows the changes in the cash
-										position (Inflows and outflows) of a firm. It is an analytical
-										reconciliation statement which explains the reasons for the
-										differences between the opening and closing cash balances over
-										a period.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
+							<!--item-->
 						<div class="col-sm-3 col-lg-12 col-md-8">
 							<div class="about-box">
 								<div class="about-box-content">
-									<h4>Fund Flow Statement</h4>
-									<p>Fund Flow Statement is a statement that shows the ups
+									<h4>TDS Rate Chart for FY 2020-21 Pre & Post 14th May 2020</h4>
+								<!-- 	<p>Fund Flow Statement is a statement that shows the ups
 										and downs of the financial position or the changes in working
-										capital of the entity between the two financial years.</p>
+										capital of the entity between the two financial years.</p> -->
 									<div class="table-responsive">
 									<table class="table">
 										<thead class="thead-light">
 											<tr>
-												<th scope="col">BASIS FOR COMPARISON</th>
-												<th scope="col">CASH FLOW</th>
-												<th scope="col">FUND FLOW</th>
+												<th scope="col">S. No</th>
+												<th scope="col">Section of the Income-tax Act</th>
+												<th scope="col">Nature of Payment</th>
+												<th scope="col">Existing Rate of TDS</th>
+												<th scope="col">Reduced rate from 14/05/2020 to 31/03/2021</th>
 											</tr>
 										</thead>
 										<tbody>
 											<tr>
-												<td>Meaning</td>
-												<td>A cash flow statement is a statement showing the
-													inflows and outflows of cash and cash equivalents over a
-													period.</td>
-												<td>A fund flow statement is a statement showing the
-													changes in the financial position of the entity in
-													different accounting years</td>
+											 <th scope="row">1</th>
+												<td>193</td>
+												<td>Interest on Securities</td>
+												<td>10%</td>
+												<td>7.5%</td>
 											</tr>
 											<tr>
-												<td>Purpose of Preparation</td>
-												<td>To show the reasons for movements in the cash at
-													the beginning and at the end of the accounting period.</td>
-												<td>To show the reasons for the changes in the
-													financial position, with respect to previous year and
-													current accounting year.</td>
+											 <th scope="row">2</th>
+												<td>194</td>
+												<td>Dividend</td>
+												<td>10%</td>
+												<td>7.5%</td>
 											</tr>
 											<tr>
-												<td>Basis</td>
-												<td>Cash Basis of Accounting.</td>
-												<td>Accrual Basis of Accounting.</td>
+											 <th scope="row">3</th>
+												<td>194A</td>
+												<td>Interest other than interest on securities</td>
+												<td>10%</td>
+												<td>7.5%</td>
 											</tr>
 											<tr>
-												<td>Analysis</td>
-												<td>Short Term Analysis of cash planning.</td>
-												<td>Long Term Analysis of financial planning</td>
+												 <th scope="row">4</th>
+												<td>194C</td>
+												<td>Payment of Contractors and sub-contractors</td>
+												<td>1% (individual/HUF)2% (others)</td>
+												<td>0.75% (individual/HUF)1.5% (others)</td>
 											</tr>
 											<tr>
-												<td>Discloses</td>
-												<td>Cash Basis of Accounting.Inflows and Outflows of
-													Cash</td>
-												<td>Sources and applications of funds</td>
+												 <th scope="row">5</th>
+												<td>194D</td>
+												<td>Insurance Commission</td>
+												<td>5%</td>
+												<td>3.75%</td>
+											</tr>
+											<tr>
+												 <th scope="row">6</th>
+												<td>194DA</td>
+												<td>Payment in respect of life insurance policy</td>
+												<td>5%</td>
+												<td>3.75%</td>
+											</tr>
+											<tr>
+												 <th scope="row">7</th>
+												<td>194EE</td>
+												<td>Payments in respect of deposits under National</td>
+												<td>10%</td>
+												<td>7.5%</td>
+											</tr>
+											<tr>
+												 <th scope="row">8</th>
+												<td>194F</td>
+												<td>Payments on account of re-purchase of Units by Mutual Funds or UTI</td>
+												<td>20%</td>
+												<td>15%</td>
+											</tr>
+											<tr>
+												 <th scope="row">9</th>
+												<td>194G</td>
+												<td>Commission, prize etc., on sale of lottery tickets</td>
+												<td>5%</td>
+												<td>3.75%</td>
+											</tr>
+											<tr>
+												 <th scope="row">10</th>
+												<td>194H</td>
+												<td>Commission or brokerage</td>
+												<td>5%</td>
+												<td>3.75%</td>
+											</tr>
+											<tr>
+												 <th scope="row">11</th>
+												<td>194-I(a)</td>
+												<td>Rent for plant and machinery</td>
+												<td>2%</td>
+												<td>1.5%</td>
+											</tr>
+											<tr>
+												 <th scope="row">12</th>
+												<td>194-I(b)</td>
+												<td>Rent for immovable property</td>
+												<td>10%</td>
+												<td>7.5%</td>
+											</tr>
+											<tr>
+												 <th scope="row">13</th>
+												<td>194-IA</td>
+												<td>Payment for acquisition of immovable property</td>
+												<td>1%</td>
+												<td>0.75%</td>
+											</tr>
+											<tr>
+												 <th scope="row">14</th>
+												<td>194-IB</td>
+												<td>Payment of rent by individual or HUF</td>
+												<td>5%</td>
+												<td>3.75%</td>
+											</tr>
+											<tr>
+												 <th scope="row">15</th>
+												<td>194-IC</td>
+												<td>Payment for Joint Development Agreements</td>
+												<td>10%</td>
+												<td>7.5%</td>
+											</tr>
+											<tr>	
+												 <th scope="row">16</th>
+												<td>194J</td>
+												<td>Fee for Professional or Technical Services (FTS), Royalty, etc.</td>
+												<td>2% (FTS, certain royalties, call centre) 10% (others)</td>
+												<td>1.5% (FTS, certain royalties, call centre) 7.5% (others)</td>
+											</tr>
+											<tr>
+												 <th scope="row">17</th>
+												<td>194K</td>
+												<td>Payment of dividend by Mutual Funds</td>
+												<td>10%</td>
+												<td>7.5%</td>
+											</tr>
+											<tr>
+												 <th scope="row">18</th>
+												<td>194LA</td>
+												<td>Payment of Compensation on acquisition of immovable property</td>
+												<td>10%</td>
+												<td>7.5%</td>
+											</tr>
+											<tr>
+												 <th scope="row">19</th>
+												<td>194LBA(1)</td>
+												<td>Payment of income by Business trust</td>
+												<td>10%</td>
+												<td>7.5%</td>
+											</tr>
+											<tr>
+												 <th scope="row">20</th>
+												<td>194LBB(i)</td>
+												<td>Payment of income by Investment fund</td>
+												<td>10%</td>
+												<td>7.5%</td>
+											</tr>
+											<tr>	
+												 <th scope="row">21</th>
+												<td>194LBC(1)</td>
+												<td>Income by securitisation trust	25% (Individual/HUF) 30% (Others)</td>
+												<td>18.75% (Individual/HUF)</td>
+												<td>22.5% (Others)</td>
+											</tr>
+											<tr>
+												 <th scope="row">22</th>
+												<td>194M</td>
+												<td>Payment to commission, brokerage etc. by Individual and HUF</td>
+												<td>5%</td>
+												<td>3.75%</td>
+											</tr>
+											<tr>
+											 <th scope="row">23</th>
+												<td>194-O</td>
+												<td>TDS on e-commerce participants</td>
+												<td>1%(w.e.f. 1.10.2020)</td>
+												<td>0.75%</td>
 											</tr>
 										</tbody>
 									</table>
 									</div>
-									<p>The financial position of any company can be better
-										understood with the help of a cash flow statement and fund
-										flow statement, along with the Balance Sheet and Income
-										statement. These two statements helps stakeholders to know the
-										sources and application of cash or funds.</p>
 								</div>
 							</div>
 						</div>
@@ -261,69 +352,18 @@
 						<div class="col-lg-12 col-md-8">
 							<div class="about-box">
 								<div class="about-box-content">
-									<h4>Vendor & Project Management</h4>
-									<p>Vendor & Project Management is a discipline that enables
-										organizations to control costs, drive service excellence and
-										mitigate risks to gain increased value from their vendors
-										throughout the deal life cycle. It is the activities included
-										in researching and sourcing vendors, obtaining quotes with
-										pricing, capabilities, turnaround times, and quality of work,
-										negotiating contracts, managing relationships, assigning jobs,
-										evaluating performance, and ensuring payments are made.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Cloud Accounting Services</h4>
-									<p>Cloud accounting software is unlike traditional way of
-										book keeping by installing accounting software in standalone
-										system or within the intranet set up. A cloud accounting
-										software is a system which can accessible from anywhere by
-										connecting remote servers, it is similar to the SaaS (Software
-										as a Service) business model. Data is sent into “the cloud,”
-										where it is processed and returned to the user.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4 class="service-title-saprater">Benefits Cloud
-										accounting:</h4>
-									<h4>Organizational reporting and visibility</h4>
-									<p>With cloud accounting, it’s also easier to get real-time
-										reporting and visibility throughout your organization, with
-										greater mobile capabilities and collaboration.
-										Subscription-based models are popular among cloud accounting
-										service providers, and in most cases these subscriptions are
-										usage-based. Companies that pay a cloud accounting
-										subscription receive auto updates depending upon any changes
-										in software functions with no additional charges.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>The Benefits of Cloud Accounting</h4>
-
-									<ul>
-										<li>	<ol>
-												<li>Mobile access at any time</li>
-												<li>A cost and time-effective solution</li>
-												<li>Watertight security and no time-consuming back-ups</li>
-												<li>Share and collaborate with ease</li>
-												<li>Reduces paperwork and is more sustainable</li>
-												<li>Better control of your financial processes</li>
-											</ol>
-											</li>
-									</ul>
-
+									<h4>Documents Requirement:</h4>
+									<ol>
+									<li>TAN details</li>
+									<li>PAN details</li>
+									<li>Last TDS filing details, if applicable</li>
+									<li>The period for which TDS must be filed</li>
+									<li>Date of incorporation of the business</li>
+									</ol>
+									<p>LeadTax provides TDS return filing service with our
+										passionate Tax Expert support. Our experts will assist you in
+										making payment of challan and file your TDS return and share
+										you the Form 16 or Form 16A.</p>
 								</div>
 							</div>
 						</div>
