--- a/provident_fund_filing.html
+++ b/provident_fund_filing.html
@@ -125,135 +125,26 @@
                <img src="https://via.placeholder.com/730x430" alt="team-01">                            
             </div> -->
 					<div class="service-detail">
-						<h3 class="service-title-saprater">Book-Keeping & Auditing
-							Services</h3>
-						<p>The recording of financial transactions is bookkeeping,
-							whereas, accounting is interpreting, classifying, analyzing,
-							reporting, and summarizing the financial data. A properly
-							maintained accounting & bookkeeping system helps a business to
-							reduce operating costs and helps to analyze its financial growth.</p>
+						<h3 class="service-title-saprater">Provident Fund Filing</h3>
+						<p>Employees’ Provident Fund is a social security scheme that
+							helps employees save a small portion of their salary for future
+							benefits. Every company has to offer its employees an EPF or
+							Employees Provident Fund which is akin to a retirement fund. EPF
+							comes under the purview of the Employees’ Provident Funds and
+							Miscellaneous Provisions Act, 1952.</p>
 
-						<p>The books of accounts needs to be maintained as per the
-							accounting standards and policies as per Accounting Standard
-							Board constituted at 21st April 1977.</p>
 					</div>
 
 					<div class="row">
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Auditing Services</h4>
-									<p>As per Section 44AB of the Income Tax Act 1961, any
-										person carrying on business is required to get his book
-										of accounts audited if total sales, turnover or gross receipt
-										in business for a financial year exceeds one Crore. In case of
-										profession should get his accounts audited, if the gross
-										receipts are greater than Rupees 50 lakh in any previous year.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>MIS</h4>
-									<p>MIS stands for management information system. It is a
-										management report which helps the management to review the
-										monthly performance, to compare it with the previous month's
-										and previous year's reports. Executives across at all levels
-										of an organization rely on reports generated from these
-										systems to help them evaluate their business daily activities
-										or problems that arise, make decisions, and track progress.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Budgetary controls</h4>
-									<p>Budgetary controls is the process by which budgets are
-										prepared for the future period and are compared with the
-										actual performance for finding out variances, if any. The
-										comparison of budgeted figures with actual figures will help
-										the management to find out variances and take corrective
-										actions without any delay.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Cash Flow statement</h4>
-									<p>Cash Flow statement shows the changes in the cash
-										position (Inflows and outflows) of a firm. It is an analytical
-										reconciliation statement which explains the reasons for the
-										differences between the opening and closing cash balances over
-										a period.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
+							<!--item-->
 						<div class="col-sm-3 col-lg-12 col-md-8">
 							<div class="about-box">
 								<div class="about-box-content">
-									<h4>Fund Flow Statement</h4>
-									<p>Fund Flow Statement is a statement that shows the ups
-										and downs of the financial position or the changes in working
-										capital of the entity between the two financial years.</p>
-									<div class="table-responsive">
-									<table class="table">
-										<thead class="thead-light">
-											<tr>
-												<th scope="col">BASIS FOR COMPARISON</th>
-												<th scope="col">CASH FLOW</th>
-												<th scope="col">FUND FLOW</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td>Meaning</td>
-												<td>A cash flow statement is a statement showing the
-													inflows and outflows of cash and cash equivalents over a
-													period.</td>
-												<td>A fund flow statement is a statement showing the
-													changes in the financial position of the entity in
-													different accounting years</td>
-											</tr>
-											<tr>
-												<td>Purpose of Preparation</td>
-												<td>To show the reasons for movements in the cash at
-													the beginning and at the end of the accounting period.</td>
-												<td>To show the reasons for the changes in the
-													financial position, with respect to previous year and
-													current accounting year.</td>
-											</tr>
-											<tr>
-												<td>Basis</td>
-												<td>Cash Basis of Accounting.</td>
-												<td>Accrual Basis of Accounting.</td>
-											</tr>
-											<tr>
-												<td>Analysis</td>
-												<td>Short Term Analysis of cash planning.</td>
-												<td>Long Term Analysis of financial planning</td>
-											</tr>
-											<tr>
-												<td>Discloses</td>
-												<td>Cash Basis of Accounting.Inflows and Outflows of
-													Cash</td>
-												<td>Sources and applications of funds</td>
-											</tr>
-										</tbody>
-									</table>
-									</div>
-									<p>The financial position of any company can be better
-										understood with the help of a cash flow statement and fund
-										flow statement, along with the Balance Sheet and Income
-										statement. These two statements helps stakeholders to know the
-										sources and application of cash or funds.</p>
+									<h4>Applicability</h4>
+								
+									<p>A Private limited company which crossed more than 20 employees are mandatory</p>
+									<p>Any business entity which entitle to give benefit to employee in the mode of PF can take voluntary PF registration even 20 employees not crossed.</p>
+									
 								</div>
 							</div>
 						</div>
@@ -261,69 +152,15 @@
 						<div class="col-lg-12 col-md-8">
 							<div class="about-box">
 								<div class="about-box-content">
-									<h4>Vendor & Project Management</h4>
-									<p>Vendor & Project Management is a discipline that enables
-										organizations to control costs, drive service excellence and
-										mitigate risks to gain increased value from their vendors
-										throughout the deal life cycle. It is the activities included
-										in researching and sourcing vendors, obtaining quotes with
-										pricing, capabilities, turnaround times, and quality of work,
-										negotiating contracts, managing relationships, assigning jobs,
-										evaluating performance, and ensuring payments are made.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>Cloud Accounting Services</h4>
-									<p>Cloud accounting software is unlike traditional way of
-										book keeping by installing accounting software in standalone
-										system or within the intranet set up. A cloud accounting
-										software is a system which can accessible from anywhere by
-										connecting remote servers, it is similar to the SaaS (Software
-										as a Service) business model. Data is sent into “the cloud,”
-										where it is processed and returned to the user.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4 class="service-title-saprater">Benefits Cloud
-										accounting:</h4>
-									<h4>Organizational reporting and visibility</h4>
-									<p>With cloud accounting, it’s also easier to get real-time
-										reporting and visibility throughout your organization, with
-										greater mobile capabilities and collaboration.
-										Subscription-based models are popular among cloud accounting
-										service providers, and in most cases these subscriptions are
-										usage-based. Companies that pay a cloud accounting
-										subscription receive auto updates depending upon any changes
-										in software functions with no additional charges.</p>
-								</div>
-							</div>
-						</div>
-						<!--item-->
-						<div class="col-lg-12 col-md-8">
-							<div class="about-box">
-								<div class="about-box-content">
-									<h4>The Benefits of Cloud Accounting</h4>
-
-									<ul>
-										<li>	<ol>
-												<li>Mobile access at any time</li>
-												<li>A cost and time-effective solution</li>
-												<li>Watertight security and no time-consuming back-ups</li>
-												<li>Share and collaborate with ease</li>
-												<li>Reduces paperwork and is more sustainable</li>
-												<li>Better control of your financial processes</li>
-											</ol>
-											</li>
-									</ul>
-
+									<h4>Documents Requirement</h4>
+									<ol>
+									<li>PAN card of establishment</li>
+									<li>Certificate of incorporation</li>
+									<li>Cross cancelled cheque of establishment</li>
+									<li>4.Address proof that is in the name of the establishment. It can be:</li>
+									<li>Rent agreement</li>
+									<li>Water, Electricity, Telephone bill, if any.</li>
+									</ol>
 								</div>
 							</div>
 						</div>
